[package]
name = "hello_dynamic"
version = "0.1.0"
authors = ["d0naim"]

[dependencies]
sharer          = { path = "../sharer" }
# libloading      = "0.5.0"
# libloading      = { path = "../rust_libloading" }
libloading      = { git = "https://github.com/Donaim/rust_libloading" }
dynamic         = "0.2.1"